@@ -28,7 +28,7 @@ import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import java.lang.invoke.MethodHandle;
 
-public abstract class AbstractSpanImpl implements Span {
+abstract class AbstractSpanImpl implements Span {
     @Nonnull
     // co.elastic.apm.agent.impl.transaction.Span
     protected final Object span;
